Reorganize dashboards for big screen, fix statistic widget spacing

--- a/app/theme/layout.scss
+++ b/app/theme/layout.scss
@@ -4,6 +4,7 @@
 .frame {
   display: flex;
   background-color:$palette-background;
+  height: 100vw;
 }
 
 .app {
@@ -49,7 +50,7 @@
 }
 
 .barGraph {
-  width: 50%;
+  width: 40vw;
 }
 
 .trafficLight {
